syntax = "proto3";
package sac.v1;
option go_package = "g.echo.tech/dev/sac/gen/sac/v1;sacv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "sac/v1/common.proto";

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string display_name = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string display_name = 4;
  string role = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message AuthResponse {
  string token = 1;
  User user = 2;
}

message UserBriefListResponse {
  repeated UserBrief users = 1;
}

message ChangePasswordRequest {
  string current_password = 1;
  string new_password = 2;
}

message RegistrationModeResponse {
  string mode = 1;
}

message SearchUsersRequest {
  string q = 1;
}

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse) {
    option (google.api.http) = { post: "/api/auth/register", body: "*" };
  }
  rpc Login(LoginRequest) returns (AuthResponse) {
    option (google.api.http) = { post: "/api/auth/login", body: "*" };
  }
  rpc GetRegistrationMode(Empty) returns (RegistrationModeResponse) {
    option (google.api.http) = { get: "/api/auth/registration-mode" };
  }
  rpc GetCurrentUser(Empty) returns (User) {
    option (google.api.http) = { get: "/api/auth/me" };
  }
  rpc ChangePassword(ChangePasswordRequest) returns (SuccessMessage) {
    option (google.api.http) = { put: "/api/auth/password", body: "*" };
  }
  rpc SearchUsers(SearchUsersRequest) returns (UserBriefListResponse) {
    option (google.api.http) = { get: "/api/users/search" };
  }
}
